# Swastha-Sevak

./: .gitignore  CLAUDE.md  README.md  __main__.py  alembic.ini  out.txt  pyproject.toml  requirements.txt  run_agent.py  run_dev.py  simulation_chat.py  swasthya_sevak_team_guide.docx  test_api.py  test_fastapi_trace.py  test_langid.py  test_webhook_agent.py  test_webhook_manual.py  trace.txt
alembic/: env.py
alembic/versions/: 96b10f954d32_create_initial_tables.py  f6c6d051bde0_add_conversationsummary_table.py
app/: __init__.py  main.py
app/agent/: TESTING.md  graph.py  states.py
app/agent/nodes/: __init__.py  classifier.py  escalation.py  language_detect.py  rag_advisor.py  response_composer.py  symptom_collector.py
app/agents/: __init__.py  graph.py  nodes.py  state.py  states.py
app/core/: config.py
app/db/: __init__.py  crud.py  models.py  session.py
app/ml/: __init__.py  classifier.py  preprocessor.py
app/ml/models/: disease_labels.json  symptom_list.json  urgency_classifier.joblib
app/nlp/: __init__.py  language_id.py  models.py  ner.py  translator.py
app/tasks/: __init__.py  alerts.py  followup.py
app/utils/: audio.py
app/webhook/: __init__.py  routes.py  schemas.py  service.py
docs/: TASK_3_NODES_IMPLEMENTATION.md
scripts/: _analyze_sources.py  merge_datasets.py  preprocess_dataset.py  train_classifier.py
tests/: asr_results.json  asr_testing.py  conftest.py  gpu_test.py  test_agent_nodes.py  test_webhook.py
